incluindo cruds e docs
