# aula 06/model/DAO/pessoa/pessoa.js
@@ -1,38 +1,31 @@
 /**************************************************************************************************************************************************************************
  * Objetivo: Arquivo responsável pelo CRUD no Banco de Dados MYSQL na tabela
- *              Filme
- * Data: 15/ 04/ 2026
+ *              Pessoa
+ * Data: 20/05/2026
  * Autor: Brayan
- * Verão: 1.0
+ * Versão: 1.0
  **************************************************************************************************************************************************************************/
+
 const knex = require('knex')
 const knexConfig = require('../../database_config_knex/knexFile')
 
 const knexConex = knex(knexConfig.development)
 
 
-const incertFilme = async function(filme){
+const incertPessoa = async function(pessoa){
     try {
         let sql = `
-        insert into tbl_filme (
+        insert into tbl_pessoa (
             nome,
-            data_lancamento,
-            duracao, 
-            sinopse, 
-            avaliacao, 
-            valor, 
-            capa,
-            id_classificacao
+            data_nascimento,
+            idade,
+            id_sexo
             )
         values (
-            '${filme.nome}',
-            '${filme.data_lancamento}',
-            '${filme.duracao}',
-            '${filme.sinopse}',
-            if('${filme.avaliacao}' = '', null, '${filme.avaliacao}'),
-            '${filme.valor}',
-            '${filme.capa}',
-            ${filme.id_classificacao}
+            '${pessoa.nome}',
+            '${pessoa.data_nascimento}',
+             ${pessoa.idade},
+             ${pessoa.id_sexo}
             );`
 
         let result = await knexConex.raw(sql)
@@ -48,19 +41,15 @@ const incertFilme = async function(filme){
 }
 
 
-const updateFilme = async function(filme){
+const updatePessoa = async function(pessoa){
     try {
         let sql = `
-            update tbl_filme set
-            nome =              '${filme.nome}',
-            data_lancamento =   '${filme.data_lancamento}', 
-            duracao =           '${filme.duracao}',
-            sinopse =           '${filme.sinopse}',
-            avaliacao =         if('${filme.avaliacao}' = '', null, '${filme.avaliacao}'),
-            valor =             '${filme.valor}',
-            capa =              '${filme.capa}',
-            id_classificacao =   ${filme.id_classificacao}
-            where id =           ${filme.id};
+            update tbl_pessoa set
+            nome =              '${pessoa.nome}',
+            data_nascimento =   '${pessoa.data_nascimento}',
+            idade =              ${pessoa.idade},
+            id_sexo =            ${pessoa.id_sexo}
+            where id =           ${pessoa.id};
         `
         let result = await knexConex.raw(sql)
 
@@ -75,9 +64,14 @@ const updateFilme = async function(filme){
 }
 
 
-const selectAllFilme = async function(){
+const selectAllPessoa = async function(){
     try {
-        let sql = `select * from tbl_filme order by id desc`
+       let sql = `
+            select id, 
+            nome, 
+            date_format(data_nascimento, '%d/%m/%Y') as data_nascimento, 
+            idade, 
+            id_sexo from tbl_pessoa order by id desc`
 
         let result = await knexConex.raw(sql)
 
@@ -93,28 +87,33 @@ const selectAllFilme = async function(){
 }
 
 
-const selectByIdFilme = async function(id){
-    try {
-        let sql = `select * from tbl_filme where id=${id}`
-
-        let result = await knexConex.raw(sql)
-
-        if(Array.isArray(result)){
-            return result[0]
-        }else{
-            return false
-        }
-
-    } catch (error) {
-        return false
-    }
-}
-
-
-const deleteFilme = async function(id){
+const selectByIdPessoa = async function(id){
     try {
         let sql = `
-            DELETE FROM tbl_filme 
+            select id, 
+            nome, 
+            date_format(data_nascimento, '%d/%m/%Y') as data_nascimento, 
+            idade, 
+            id_sexo from tbl_pessoa where id=${id}`
+
+        let result = await knexConex.raw(sql)
+
+        if(Array.isArray(result)){
+            return result[0]
+        }else{
+            return false
+        }
+
+    } catch (error) {
+        return false
+    }
+}
+
+
+const deletePessoa = async function(id){
+    try {
+        let sql = `
+            DELETE FROM tbl_pessoa
             WHERE id = ${id};
         `
         let result = await knexConex.raw(sql)
@@ -130,9 +129,9 @@ const deleteFilme = async function(id){
 }
 
 module.exports = {
-    incertFilme,
-    updateFilme,
-    selectAllFilme,
-    selectByIdFilme,
-    deleteFilme,
+    incertPessoa,
+    updatePessoa,
+    selectAllPessoa,
+    selectByIdPessoa,
+    deletePessoa
 }
